sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:17: error: ';' expected but 'while' found.
    } while (ecart >1 || echange==true)
      ^AlgCombSort:19: error: 'while' expected but '}' found.
} 
^